# ecogal

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: codeql.yml  python-package.yml
ecogal/: __init__.py  pbcor.py  visualcheck.py
ecogal/tests/: test_pbcor.py
