[tool:pytest]
testpaths = "ecogal/tests"

[metadata]
package_name = ecogal
description = ALMA reductions from the ECOGAL project
author = M. Lee
license = MIT
license_files = LICENSE
url = https://github.com/mjastro/ecogal
edit_on_github = False
github_project = mjastro/ecogal
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Source = https://github.com/mjastro/ecogal
    Tracker = https://github.com/mjastro/ecogal/issues
classifiers=
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Astronomy

[options]
python_requires = >=3.9
packages = 
    ecogal
install_requires = 
    numpy
    cython
    matplotlib
    scipy
    grizli[aws]
    astropy
    scipy
    matplotlib
    tqdm
    reproject
    wget
    tqdm
    shapely
    pillow
    msaexp
    cmasher
include_package_data = True

[options.extras_require]
test =
    pytest>=5.1
    pytest-cov
    flake8
docs =
    sphinx
    sphinx-astropy
